--- a/app/src/main/res/layout/layout_classroom2_control_land.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_land.xml
@@ -95,7 +95,7 @@
                 android:gravity="center"
                 android:maxLength="10"
                 android:singleLine="true"
-                android:ellipsize="marquee"
+                android:ellipsize="end"
                 />
 
 
