--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -128,7 +128,7 @@
             android:layout_marginRight="@dimen/px10"
             android:layout_marginLeft="@dimen/px10"
             android:maxLength="10"
-            android:ellipsize="marquee"
+            android:ellipsize="end"
             android:singleLine="true"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintLeft_toRightOf="@id/p_bottom_avator"
