Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -37,6 +37,7 @@
             android:layout_marginTop="@dimen/px281"
             android:layout_marginBottom="@dimen/px124"
             android:layout_marginLeft="@dimen/px30"
+            android:visibility="gone"
             />
 
 
