Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_classroom2_control_land.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_land.xml
@@ -210,7 +210,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="gone"
+            android:visibility="visible"
             />
 
     <TextView
@@ -224,11 +224,11 @@
             android:drawablePadding="@dimen/px12"
             android:singleLine="true"
             android:layout_marginTop="@dimen/px39"
-            android:layout_marginLeft="@dimen/px54"
+            android:layout_marginLeft="@dimen/px70"
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="@id/center_panel"
             app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     <!--<TextView-->
     <!--android:id="@+id/center_board_opera"-->
@@ -248,24 +248,6 @@
     <!--android:visibility="visible"/>-->
 
     <TextView
-            android:id="@+id/center_board_mgr"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="白板管理"
-            android:textSize="@dimen/font_22px"
-            android:textColor="@color/selector_classroom2_center_control_text"
-            android:drawableTop="@drawable/ic_class_whiteboardmanagement"
-            android:drawablePadding="@dimen/px12"
-            android:singleLine="true"
-            android:layout_marginTop="@dimen/px39"
-            android:layout_marginLeft="@dimen/px71"
-            android:gravity="center"
-            app:layout_constraintLeft_toRightOf="@id/center_one2one"
-            app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="gone"/>
-
-
-    <TextView
             android:id="@+id/center_new_board"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -278,26 +260,45 @@
             android:layout_marginTop="@dimen/px39"
             android:layout_marginLeft="@dimen/px54"
             android:gravity="center"
-            app:layout_constraintLeft_toRightOf="@id/center_board_mgr"
+            app:layout_constraintLeft_toRightOf="@id/center_one2one"
             app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
+
+
+    <TextView
+            android:id="@+id/center_board_mgr"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="白板管理"
+            android:textSize="@dimen/font_22px"
+            android:textColor="@color/selector_classroom2_center_control_text"
+            android:drawableTop="@drawable/ic_class_whiteboardmanagement"
+            android:drawablePadding="@dimen/px12"
+            android:singleLine="true"
+            android:layout_marginTop="@dimen/px39"
+            android:layout_marginLeft="@dimen/px54"
+            android:gravity="center"
+            app:layout_constraintLeft_toRightOf="@id/center_new_board"
+            app:layout_constraintTop_toTopOf="@id/center_panel"
+            android:visibility="visible"
+            />
 
     <TextView
             android:id="@+id/center_member"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="教室成员"
+            android:text="成员"
             android:textSize="@dimen/font_22px"
             android:textColor="@color/selector_classroom2_center_control_text"
             android:drawableTop="@drawable/ic_class_operation_members"
             android:drawablePadding="@dimen/px12"
             android:layout_marginTop="@dimen/px39"
             android:singleLine="true"
-            android:layout_marginLeft="@dimen/px54"
+            android:layout_marginLeft="@dimen/px70"
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="@id/center_panel"
             app:layout_constraintTop_toBottomOf="@id/center_one2one"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     <TextView
             android:id="@+id/center_database"
@@ -309,11 +310,11 @@
             android:drawableTop="@drawable/ic_class_operation_database"
             android:drawablePadding="@dimen/px12"
             android:singleLine="true"
-            android:layout_marginLeft="@dimen/px71"
+            android:layout_marginLeft="@dimen/px54"
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_member"
             app:layout_constraintTop_toTopOf="@id/center_member"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
     <TextView
             android:id="@+id/center_canlender"
@@ -329,6 +330,6 @@
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_database"
             app:layout_constraintTop_toTopOf="@id/center_database"
-            android:visibility="gone"/>
+            android:visibility="visible"/>
 
 </android.support.constraint.ConstraintLayout>
