--- a/app/src/main/res/layout/layout_classroom2_control_land.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_land.xml
@@ -210,7 +210,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:visibility="visible"
+            android:visibility="gone"
             />
 
     <TextView
@@ -228,7 +228,7 @@
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="@id/center_panel"
             app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     <!--<TextView-->
     <!--android:id="@+id/center_board_opera"-->
@@ -262,7 +262,7 @@
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_one2one"
             app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
 
     <TextView
@@ -280,7 +280,7 @@
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_new_board"
             app:layout_constraintTop_toTopOf="@id/center_panel"
-            android:visibility="visible"
+            android:visibility="gone"
             />
 
     <TextView
@@ -298,7 +298,7 @@
             android:gravity="center"
             app:layout_constraintLeft_toLeftOf="@id/center_panel"
             app:layout_constraintTop_toBottomOf="@id/center_one2one"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     <TextView
             android:id="@+id/center_database"
@@ -314,7 +314,7 @@
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_member"
             app:layout_constraintTop_toTopOf="@id/center_member"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     <TextView
             android:id="@+id/center_canlender"
@@ -330,6 +330,6 @@
             android:gravity="center"
             app:layout_constraintLeft_toRightOf="@id/center_database"
             app:layout_constraintTop_toTopOf="@id/center_database"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
