--- a/app/src/main/res/layout/fragment_classroom_board_screenshot.xml
+++ b/app/src/main/res/layout/fragment_classroom_board_screenshot.xml
@@ -90,15 +90,6 @@
             android:paddingRight="@dimen/px25"
             android:scaleType="center" />
 
-        <ImageView
-            android:id="@+id/eraser_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/wb_selection_middle"
-            android:paddingLeft="@dimen/px25"
-            android:paddingRight="@dimen/px25"
-            android:scaleType="center"
-            android:src="@drawable/ic_wb_tool_rubber" />
 
         <!--<ImageView
             android:id="@+id/text_btn"
@@ -133,6 +124,15 @@
             android:scaleType="center"
             android:src="@drawable/wb_redo_selector" />
 
+        <ImageView
+            android:id="@+id/eraser_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/px25"
+            android:paddingRight="@dimen/px25"
+            android:scaleType="center"
+            android:src="@drawable/ic_wb_tool_rubber" />
+
     </LinearLayout>
 
     <RelativeLayout
@@ -143,7 +143,7 @@
             android:id="@+id/btn_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_class_back"
+            android:src="@drawable/ic_close_screenshot"
             android:layout_marginTop="@dimen/px20"
             android:layout_marginLeft="@dimen/px20"
             />
